--- a/src/style.css
+++ b/src/style.css
@@ -47,22 +47,43 @@ table {
 	border-spacing: 0;
 }
 
+/*Google font*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;900&display=swap');
 
-#content {
-    height: 100vh;
-  }
+/*color*/
 
-.container {
-    margin-left: 100px;
-    margin-right: 100px;
+:root {
+    --color-purple: #81007f;
+    --color-purple-opacity: rgba(129, 0, 127, 0.8);
 }
 
-nav {
+/*custom css*/
+
+html, body {
+    width: 100%;
+    height: 100%;
+    font-family: 'Poppins', sans-serif;
+}
+
+#content {
     display: flex;
-    justify-content: space-between;
-    height: 130px;
-    background-color: black;
+    flex-direction: column;
+    background: url('./hero.jpg');
+    background-attachment: fixed;
+    min-height: 100%;
+}
+
+/*nav bar*/
+nav {
+    background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+nav img {
+    margin-top: 20px;
 }
 
 ul {
@@ -70,20 +91,87 @@ ul {
 }
 
 li {
-    padding: 50px;
+    padding: 30px;
+    font-size: 1.5rem;
 }
 
 li:last-of-type {
     padding-right: 0px;
 }
 
+/*main*/
 main {
-    background: url('./hero.jpg');
-    height: 80%;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}  
+
+.container {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: clamp(320px, 80vw, 60rem);
+    background-color: var(--color-purple-opacity);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
 }
 
-footer {
-    background-color: black;
+main .container h1 {
+    font-size: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+main .container h2 {
+    font-size: 2rem;
+    margin: 1rem;
+}
+
+main .container p {
+    font-size: 1.5rem;
+    margin: 1rem;
+    line-height: 2rem;
+}
+
+main .menuItem h3 {
+    font-size: 1.2rem;
+}
+
+main .menuItem p {
+    font-size: 1rem;
+}
+
+.menuContainer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3rem;
+    justify-content: center;
+}
+
+.menuItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color:#000;
     color: #fff;
-    height: 10%;
+    padding: 1rem;
+}
+
+.menuItem img {
+    margin-bottom: 1.5rem;
+}
+
+/*footer*/
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    min-height: 10%;
+    background-color: #000;
+    padding: 1rem;
+    color: #fff;
 }
