--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,12 @@ html, body {
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    overflow-y: scroll;
+    scrollbar-color: rebeccapurple green;
+    scrollbar-width: thin;
+}
+
 #content {
     display: flex;
     flex-direction: column;
@@ -93,6 +99,13 @@ ul {
 li {
     padding: 30px;
     font-size: 1.5rem;
+    cursor: pointer;
+}
+
+li:hover {
+    color:rgba(129, 0, 127, 0.8);
+    transition: all .2s ease-in-out; 
+    transform: scale(1.1); 
 }
 
 li:last-of-type {
